--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Information Management – EPPS6354</title>
+<title>Resume – EPPS6354</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -99,11 +99,11 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">About</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="./information-management.html" aria-current="page"> 
+    <a class="nav-link" href="./information-management.html"> 
 <span class="menu-text">Information Management</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./resume.html"> 
+    <a class="nav-link active" href="./resume.html" aria-current="page"> 
 <span class="menu-text">Resume</span></a>
   </li>  
 </ul>
@@ -125,7 +125,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Information Management</h1>
+<h1 class="title">Resume</h1>
 </div>
 
 
@@ -142,8 +142,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>Assignment 1</p>
-<p>Assignment 2</p>
+<p>This is my resume</p>
 
 
 
